--- a/style.css
+++ b/style.css
@@ -95,7 +95,7 @@ color: purple;
     height: 400px;
     justify-content: center;
     align-items: center;
-    background:url(icehome.png)no-repeat center center/cover;
+    background:url(images/icehome.png)no-repeat center center/cover;
     
     
 }
@@ -121,7 +121,7 @@ color: purple;
     flex-direction: column;
     align-items: center;
     height: 400px;
-   background:url(sec2.png)no-repeat center center/cover;
+   background:url(images/sec2.png)no-repeat center center/cover;
    opacity: 0.7;
 }
 .About h2{
