--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 *{
-    margin: 15px;
+   margin: 0px;
     padding: 0px;
 }
 /*Navigationbar*/
@@ -8,6 +8,7 @@
    display: flex;
    align-items: center;
    height: 80px;
+   margin: 2rem;
    box-shadow:10px 10px 10px grey;
 
 }
@@ -30,12 +31,16 @@
 #navbar ul{
 display: flex;
 position: relative;
+/*margin: 10px;
+padding: 5px;*/
 }
 
 #navbar ul li {
     list-style: none;
     font-size: 1.3rem;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    margin: 10px;
+padding: 10px;
 }
 #navbar ul li a{
     display: block;
@@ -100,13 +105,16 @@ border-radius: 50%;
 
 
 .search{
-    padding: 3px 22px;
+    padding: 2px;
     display: flex;
+    margin-left: 10rem;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
 }
 
 .btn{
 background-color: pink;
-margin: 2px;
+margin: 9px;
 padding: 3px 2px;
 border: 2px solid pink;
 align-items: flex-end;
@@ -116,6 +124,7 @@ color: purple;
     font-size: 2.5rem;
     cursor: pointer;
     color: purple;
+    margin-left: 10rem;
  }
 /*Home*/
 #Home{
@@ -123,6 +132,7 @@ color: purple;
     flex-direction: column;
     padding: 3px 200px;
     height: 400px;
+    margin: 2rem;
     justify-content: center;
     align-items: center;
     background:url(images/icehome.png)no-repeat center center/cover;
@@ -148,8 +158,9 @@ color: purple;
     flex-direction: column;
     align-items: center;
     height: 400px;
+    margin: 2rem;
    background:url(images/sec2.png)no-repeat center center/cover;
-   opacity: 0.7;
+   opacity: 0.6;
    box-shadow:10px 10px 10px black;
 
 }
@@ -158,8 +169,8 @@ color: purple;
 }
 .About p{
 text-decoration: underline 2px;
-font-family: 'Satisfy', cursive;
-font-size: 1rem;
+font-size: 2rem;
+
 
 }
 
@@ -192,12 +203,15 @@ padding: 10px;
 /* Menu*/
 .menu{
     background: lightcoral;
+    margin: 2rem;
+   
 }
 .menu .box-container{
     display: grid;
 grid-template-columns: repeat(auto-fit,minmax(20rem,1fr));
 gap: 1.3rem;
 box-shadow: 10px 10px 10px black;
+padding :20px;
 
 }
 .menu .box-container.box.image{
@@ -232,8 +246,9 @@ padding: 1rem 0;
 
 }
 .menu .box-container.box.content.price{
-font-size: 5.5rem;
+font-size: 6.5rem;
 padding: .5rem;
+font-size: x-large;
 }
 /*order*/
 .container{
@@ -241,10 +256,10 @@ padding: .5rem;
  display: flex;
 justify-content: center;
 align-items: center;
-width: 100%;
+width: 95.99%;
 height: 100%;
 padding: 20px 100px;
-margin: 0;
+margin: 2rem;
 box-sizing: border-box;
 font-family: 'Quicksand', sans-serif;
 
@@ -274,12 +289,13 @@ background-color:white;
 box-shadow: 0px 0px 19px 5px rgba(0,0,0,0.19);
 }
 .left{
-    height: 100%;
+ height: 100%;
     background: url(images/order1.png)no-repeat center;
    background-size: cover;
+   
 }
 .right{
-    padding: 25px 40px;
+    padding: 15px 60px;
 }
 h2{
     position:relative;
@@ -300,7 +316,8 @@ h2:after{
 }
 .field{
 width: 100%;
-padding: 0.5rem 1rem;
+/*padding: 0.5rem 1rem;*/
+padding: 8px 15px ;
 outline: none;
 border: 2px solid rgba(0,0,0,0,0);
 background-color: rgba(230, 230, 230, 0.6);
@@ -321,9 +338,11 @@ border: 2px solid rgba(30,85,250,0.47);
 }
 .btn2{
     width: 100%;
-    padding: 0.5rem 1rem;
+    margin:2rem;
+    margin-left: 1rem;
+    padding: 15px 15px ;
     font-size: 1.1rem;
-    background-color: #2ecc71;
+    background-color: rgb(224, 161, 78);
     cursor: pointer;
     outline: none;
     border:none;
@@ -332,7 +351,7 @@ border: 2px solid rgba(30,85,250,0.47);
 
 }
 .btn2:hover{
-    background-color: green;
+    background-color:rgb(138, 81, 6);
 }
 @media screen and(max-width:880px) {
     .contact-box{
@@ -346,8 +365,8 @@ border: 2px solid rgba(30,85,250,0.47);
 /*footer*/
 .footer{
     background: url(images/footer.png)no-repeat center center/cover;
-    opacity: 0.8;
-    margin-top: 2rem;
+ margin: 2rem;
+    padding: 5px;
     text-align: center;
     box-shadow:10px 10px 20px black;
 
@@ -355,8 +374,11 @@ border: 2px solid rgba(30,85,250,0.47);
 
 .footer .icon-container{
     display:grid;
-grid-template-columns:repeat(auto-fit,minmax(15rem,1fr));
+grid-template-columns:repeat(auto-fit,minmax(1rem,1fr));
 gap: 2rem;
+padding: 3rem;
+
+
 }
 
 .footer .icon-container.icons{
@@ -364,6 +386,8 @@ gap: 2rem;
     padding: 3rem 2rem;
     height: 10px;
     width: 10px;
+    margin-left: 2rem;
+   
 
 }
 .footer .icon-container.icons i{
@@ -397,10 +421,14 @@ gap: 2rem;
     text-decoration:none;
 }
 
-.footer .icon-container.icons link:hover{
+.footer .icon-container .icons link:hover{
     color:brown;
-    text-decoration:underline;
+    text-decoration:none;
 
+}
+.footer .icon-container :hover{
+    background: rgb(224, 161, 78);  
+    border-radius: 80%;
 }
 .footer .share{
     margin:2rem 0;
@@ -415,16 +443,17 @@ gap: 2rem;
 }
 
 .footer .share a:hover{
-    background:brown;
+    background: rgb(224, 161, 78); ;
   
 }
 
 .footer .credit{
-    margin: 2rem;
-    padding: 3rem;
+  /*
+    margin: 2rem;*/
+    padding: 2px;
     font-size: 2rem;
     color: black;
-    background-color: brown;
+    background-color: rgb(138, 81, 6);
 }
 
 .footer .credit span{
