--- a/style.css
+++ b/style.css
@@ -160,7 +160,7 @@ color: purple;
     height: 400px;
     margin: 2rem;
    background:url(images/sec2.png)no-repeat center center/cover;
-   opacity: 0.6;
+   opacity: 0.7;
    box-shadow:10px 10px 10px black;
 
 }
@@ -297,6 +297,7 @@ box-shadow: 0px 0px 19px 5px rgba(0,0,0,0.19);
 .right{
     padding: 15px 60px;
 }
+
 h2{
     position:relative;
     padding-bottom: 10px;
@@ -314,9 +315,44 @@ h2:after{
     border-radius: 2px;
    
 }
+
+#cup{
+    width: 100%;
+    padding: 8px 15px ;
+    outline: none;
+    border: 2px solid black;
+    background-color: rgba(230, 230, 230, 0.6);
+    font-size: 1.1rem;
+    margin-bottom: 22px;
+    transition: .3s;
+}
+  
+#cone{
+    width: 100%;
+    padding: 8px 15px ;
+    outline: none;
+    border: 2px solid black;
+    background-color: rgba(230, 230, 230, 0.6);
+    font-size: 1.1rem;
+    margin-bottom: 22px;
+    transition: .3s;
+}
+
+
+ #Flavours{
+    width: 100%;
+padding: 8px 15px ;
+outline: none;
+border: 2px solid black;
+background-color: rgba(230, 230, 230, 0.6);
+font-size: 1.1rem;
+margin-bottom: 22px;
+transition: .3s;
+
+ }
+
 .field{
-width: 100%;
-/*padding: 0.5rem 1rem;*/
+width: 90%;
 padding: 8px 15px ;
 outline: none;
 border: 2px solid rgba(0,0,0,0,0);
@@ -336,19 +372,21 @@ border: 2px solid rgba(30,85,250,0.47);
 .area{
     min-height: 150px;
 }
-.btn2{
-    width: 100%;
+.btn2 {
+    display: flex;
+    align-items: flex-end;
+    width: 90.99%;
     margin:2rem;
     margin-left: 1rem;
+    margin-bottom: 22px;
     padding: 15px 15px ;
-    font-size: 1.1rem;
+   font-size:1.1rem;
     background-color: rgb(224, 161, 78);
     cursor: pointer;
     outline: none;
     border:none;
     color: white;
     transition: .3s;
-
 }
 .btn2:hover{
     background-color:rgb(138, 81, 6);
